2010-06-28  MORITA Hajime  <morrita@google.com>

        Reviewed by Shinichiro Hamaji.

        rebaseline-chromium-webkit-tests doesn't do diffs right with a Git checkout of WebKit
        https://bugs.webkit.org/show_bug.cgi?id=38775

        - Introduced SCM.show_head() and SCM.diff_for_file().
        - Replaced direct svn invocations with newly implement SCM methods.

        * Scripts/webkitpy/common/checkout/scm.py:
        * Scripts/webkitpy/common/checkout/scm_unittest.py:
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:

2010-06-30  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Sam Weinig.

        Allow MiniBrowser to open local files
        https://bugs.webkit.org/show_bug.cgi?id=41104

        Wire up the openDocument: message with an NSOpenPanel, so we can open
        local files.
        
        Also change the xib so that the window remembers its size.
        
        * MiniBrowser/mac/AppDelegate.m:
        (-[BrowserAppDelegate frontmostBrowserWindowController]):
        (-[BrowserAppDelegate openDocument:]):
        (-[BrowserAppDelegate openPanelDidEnd:returnCode:contextInfo:]):
        * MiniBrowser/mac/English.lproj/BrowserWindow.xib:

2010-06-30  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Anders Carlsson.

        Add debug-webkittestrunner and cleanup related scripts.

        * Scripts/debug-webkittestrunner: Added.
        * Scripts/run-webkittestrunner:
        * Scripts/webkitdirs.pm:

2010-06-30  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix after recent changes to LayoutTestController.

        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::pageSizeAndMarginsInPixels):

2010-06-29  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Patch for https://bugs.webkit.org/show_bug.cgi?id=41389
        Make WebKitTestRunner work with more than one test at a time.
